add how to content

--- a/index.html
+++ b/index.html
@@ -31,128 +31,110 @@
           <button id="close-how-to"><i class="far fa-times-circle"></i></button>
           <h3> Table of Contents</h3>
           <br>
-          <p><a href="#about">About</a></p>
+          <p><a href="#ttrpg">Role-Playing games</a></p>
           <br>
-          <p><a href="#how-to-use">How to use</a></p>
+          <p><a href="#how-to-use">Mythic</a></p>
           <br>
-          <p><a href="#other-systems">Using with other systems</a></p>
+          <p><a href="#rules">How to use Mythic</a></p>
+          <br>
+          <p><a href="#other-systems">Mythic & other RPG systems</a></p>
+          <br>
+          <p><a href="#example">Example of Play</a></p>
           <br>
           <p><a href="#glossary">Glossary</a></p>
           <br>
           <br>
-          <h3 id="about">What is a roleplaying game?</h3>
           <br>
-          <p>Role playing games such as <a href="https://dnd.wizards.com/" target="_blank">Dungeons & Dragons</a> and <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank">Call of Cthulhu</a>
-             are collaborative story telling games that uses dice to determine results.</p>
+          <h3 id="ttrpg">What is a roleplaying game?</h3>
           <br>
-          <p>In most roleplaying games, there are two distinct roles. The Game Master(GM) and the players. </p>
+          <p>
+            Table top Role playing games (ttrpg) such as <a href="https://dnd.wizards.com/" target="_blank">Dungeons & Dragons</a> and <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank">Call of Cthulhu</a>
+             are pen & paper, collaborative story telling games that uses dice to determine results.
+          </p>
           <br>
-          <p>The GM is the main storyteller for the game. They create and describe the adventure for the players, 
+          <p>
+            In most roleplaying games, there are two distinct roles. The Game Master(GM) and the players. 
+          </p>
+          <br>
+          <p>
+            The GM is the main storyteller for the game. They create and describe the adventure for the players, 
             introduce conflicts, control any non-playable characters(NPC) the players interact with, 
             give the players goals to accomplish, and describe the outcomes of dice rolls.  
           </p>
           <br>
-          <p>The players each control one character that they can create themselves. They work together to 
+          <p>
+            The players each control one character that they can create themselves. They work together to 
             overcome any conflicts and plotlines introduced by the GM. They do this by describing what they 
             want to do and rolling dice to see if they were successful or not. 
           </p>
           <br>
-          <p>In most games, player actions are limited by the choices given to them by the designer of the game.
+          <p>
+            In most games, player actions are limited by the choices given to them by the designer of the game.
              Role-playing games are different in that the players have complete control over where they want to go and what they want to do.
           </p>
+          <br>
           <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br>
-          <p>Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
-              with perhaps a few minutes of brainstorming to come up with the initial setup.</p>
-              <br>
-              <p>
-              Mythic can also be played entirely without a GM. The same mechanics in Mythic that allow a GM to run an 
-              adventure without preparation also allows a group of players to do without the GM.</p>
-              <br>
-              <p>If you don't know anything about role playing games, thats ok. Mythic can be used as a creative writing tool to
-                 generate ideas for chapters, characters and plot twists on the fly. 
-              </p>
-              <br>
-              <h3 id="how-to-use">Ok, but how does it work?</h3>
-              <br>
-              <p>
-              Start by coming up with a quick setup scene. Perhaps you are investigators tasked with investigating a haunted mansion, or a group of warriors
-              hired to protect a caravan travelling from town to town"
-              </p>
-              <br>
-              <p>
-                in the tab marked lists you can add any relevant non player characters and story threads. In our haunted mansion scenario the non player characters 
-                could consist of the owner of the house, the ghost said to haunt it etc. A thread could be to find and banish the ghost. If you have no ideas then you can 
-                generate an event in the oracle tab and use the random words as a guide.
-              </p>
-              <br>
-              <p>
-                Next, in the scene tab, add a new scene and write out the scene setup. In our haunted house example our investigators could decide they want to go to 
-                library to check any history pertaining to the house. 
-              </p>
-              <br>
-              <p>
-                When the scene is ready to begin, click the scene button in the oracle tab. If there is no change continue as planned, if it is altered, change the 
-                scene slightly, eg the library is closed due to renivations. If the scene is interrupted something entirely different happens. 
-              </p>
-              <br>
-              <p>
-                A scene interrupted will also give you a focus for the interruption. npc negative, pc positive, close a thread etc. Use this focus along with 
-              the event button to come up with the interruption to the scene. Refer to your lists for threads and characters. In our haunted house example a 
-              scene interrupted followed by npc negative and the event keywords betray & trust could mean the idea that the person who hired us turns out to be a 
-              liar and we should doubt his motives. Context is key and everything is completely open to interpritation. 
-              </p>
-              <br>
-              <p>
-                if you want to ask a question, use the question fate button in the oracle tab. Set the odds of the answer being yes and the oracle will give 
-                you a yes or no answer to your question. if your answer is followed by the keyword "exceptional", then your answer yes or no should have an additional 
-                sense of weight to the answer. Our investigators ask the oracle "was the person who hired of us suspected of any crimes in the past?" 
-              </p>
-              <br>
-              <p>Possible interpritations</p>
-              <p>yes - yes he was</p>
-              <p>no - no he wasnt</p>
-              <p>yes exceptional - yes he was and he killed someone in the house you are investigating</p>
-              <p>no exceptional - no, in fact he is a local philanthropist and is known for healping the sick and needy</p>
-              <br>
-              <p>
-                Sometimes the answer will also be followed by a random event. The random event will also give you a focus and you can again use the event button 
-                to generate two random keywords to come up with the meaning. 
-              </p>
-              <br>
-              <p>
-                A scene can be as short or as long as you like. When the main action of your scene is over, change the chaos number up or down depending on how in control 
-                the characters were in the last scene. Our investigators are finished at the library and gained a lot of information with no trouble. The players decide 
-                to lower the chaos by 1.
-              </p>
-              <p>
-                At the end of a scene it is also a good idea to update any new characters or threads in the list tabs. 
-              </p>
-              <br>
-              <p>
-                The higher the chaos number the greater chance of scene interrupts and yes answers in the oracle. Start a new scene and repeat the process 
-                as much as you like or until the session comes to a natural conclusion.
-              </p>
-              <br>
-              <h3 id="other-systems">How to use this with another gaming system?</h3>
-              <br>
-              <p>
-                Mythic provides structure and ideas for your adventure to unfold naturally, but what about rules for fighting or skill checks?
-              </p>
-              <br>
-              <p>
-                Each gaming system will have its own rules for combat, for chases, for skill checks. If you get caught in a confrontation playing a game 
-                of Dungeons and Dragons, then use these rules for resolving the combat.
-              </p>
-              <br>
-              <p>
-                You can also just use mythic and question fate to resolve anything you want. You can ask fate " I punch the zombie, does it die?" set 
-                realistic odds for your character and see what happens.
-              </p>
-              <br>
-              <h3 id="glossary">Glossary</h3>
+          <br>
+          <h3 id="how-to-use">Mythic</h3>
+          <br>
+          <p>
+            Mythic is a tool for use with your table-top RPG sessions. It is a simple GM emulator. 
+            You can ask it yes/no questions and generate random events that focus on any relevant NPC and story threads in your adventure.
+            It is a digital implimentation of the <a href="https://www.drivethrurpg.com/product/20798/Mythic-Game-Master-Emulator" target="_blank">Mythic Game Master Emulator</a> book.  
+          </p>
+          <br>
+          <p>
+            Normally, before a session begins, the GM must spend a lot of time generating the adventure, coming up with plot points, characters and obstacles. 
+          </p>
+          <p>
+            Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
+            with perhaps a few minutes of brainstorming to come up with the initial setup.
+          </p>
+          <br>
+          <p>
+            Mythic can also be played entirely without a GM. The same mechanics in Mythic that allow a GM to run an 
+            adventure without preparation also allows a group of players to play without a GM.
+          </p>
+          <br>
+          <p>
+            The possibilities of what mythic can generate are limited only by the players imagination. At times answers will be very clear, and at other times 
+            they will be vauge and require a good bit of interpritation.
+          </p>
+          <br>
+          <p>
+            If you don't know anything about role playing games, thats ok. Mythic can be used as a creative writing tool to
+            generate ideas for stories, characters and plot twists. Any author can use it for insperation when they have writers block. 
+          </p>
+          <br>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          <br>
+          <h3 id="rules">How to use Mythic</h3>
+          <br>
+          <h4>Setup</h4>
+          <br>
+          <h3 id="other-systems">How to use this with another gaming system?</h3>
+          <br>
+          <p>
+            Mythic provides structure and ideas for your adventure to unfold naturally, but what about rules for fighting or skill checks?
+          </p>
+          <br>
+          <p>
+            Each gaming system will have its own rules for combat, for chases, for skill checks. If you get caught in a confrontation playing a game 
+            of Dungeons and Dragons, then use these rules for resolving the combat.
+          </p>
+          <br>
+          <p>
+            You can also just use mythic and question fate to resolve anything you want. You can ask fate " I punch the zombie, does it die?" set 
+            realistic odds for your character and see what happens.
+          </p>
+          <br>
+          <h3 id="glossary">Glossary</h3>
 
 
 
