--- a/index.html
+++ b/index.html
@@ -118,6 +118,95 @@
           <br>
           <h4>Setup</h4>
           <br>
+          <p>
+            To get the most out of mythic its best to do a couple of minutes preperation. Or you can skip the setup and start playing straight away.
+          </p>
+          <br>
+          <p>
+            Go to the tab "lists" tab and add any characters or threads relevant to your adventure. If you have no ideas, you can generate an event 
+            in the oracle tab or go <a href="https://donjon.bin.sh/" target="_blank">to this website</a> and generate any number of random characters and
+            threads. A thread is just a small plot point the characters are moving towards. There is no minimum or maximum amount of characters or threads in a session.
+          </p>
+          <br>
+          <p>
+            Go the scene tab and add your first scene. Label it whatever you would like and then write the scene setup. A couple of lines is fine. All 
+            that is important is that you write the main action you would like to accomplish for this scene. If you have no ideas again you can generate an event 
+            in the oracle tab and see what ideas it gives you. 
+          </p>
+          <br>
+          <h4>Starting a new scene</h4>
+          <br>
+          <p>
+            When you are ready to begin a scene, Click the "start scene" button in the oracle tab. It will tell you if your scene is unmodified, altered or interrupted. 
+          </p>
+          <br>
+          <p>
+            An unmodified scene proceeds as you had planned.
+          </p>
+          <br>
+          <p>
+            An altered scene is changed slightly. Perhaps its the weather or you take a detour somewhere, but the main action of the scene is the same. You can generate an event if you need an idea of how.
+          </p>
+          <br>
+          <p>
+            An interrupted scene is completely different than what you had planned. An interrupted scene will also give you a focus for the interruption
+            and should generate an event also to see what happens. 
+          </p>
+          <br>
+          <h4>Playing out a scene</h4>
+          <br>
+          <p>A scene is of no fixed length. It ends when you feel it has ended. If the main action you wanted to accomplish is finished you could consider the scene
+            over. A scene can last 5 minutes or 5 days, it doesn't matter.
+          </p>
+          <br>
+          <p>
+            When you feel the scene is over you can end it. If the players felt in control of the scene, lower the chaos number. If the players were not in control 
+          , then raise the chaos number. If you are not sure, then raise it.
+          </p>
+          <br>
+          <p>
+            Go to the list tab and update and characters or threads. 
+          </p>
+          <br>
+          <p>
+            Go to the scene tab and create a new scene. Repeat the process as much as you like. There is no minimum or maximum scenes in a session.
+          </p>
+          <br>
+          <h4>Asking questions</h4>
+          <br>
+          <p>
+            At various points throughtout the session, players may want to ask questions, "Is a door locked?", "Is there any light coming from the house?". In these 
+            situations, players can use the question button in the oracle tab. 
+          </p>
+          <br>
+          <p>
+            Form a yes/no question in your mind. when you click the question button, set the odds of a "YES" answer to the question and click the submit button.
+          </p>
+          <br>
+          <p>There are 4 possible results. Yes, no, yes esceptional and no exceptional.</p>
+          <br>
+          <p>
+            Along with the answer to the question, a random event may also be triggered. The players will also recieve a focus for the random event and should generate
+            an event for it also to see what happens.
+          </p>
+          <br>
+          <h4>Some Example Question</h4>
+          <br>
+          <p>
+            “My character parachutes out of the plane. He tries to land in an open field. Does he make it safely?”
+          </p>
+          <p>Yes: Yep.</p>
+          <p>No: He lands in the field, but hurts himself.</p>
+          <p>Exceptional Yes: He lands without a problem, and very quickly</p>
+          <p>Exceptional No: He misses the field entirely and crashes into the forest. He hurts himself, badly.</p>
+          <br>
+          <p>“As I walk through the dark hall, I listen carefully. Do I hear any sounds?”</p>
+          <p>Yes: You hear something, but you don’t know what yet.</p>
+          <p>No: All is silent.</p>
+          <p>Exceptional Yes: You hear something very loud, perhaps very sudden. It may take another question to figure out what it is.</p>
+          <p>Exceptional No: All is silent. There is no appropriate exceptional result, so this remains the same as a simple no</p>
+          <br>
+          <br>
           <h3 id="other-systems">How to use this with another gaming system?</h3>
           <br>
           <p>
@@ -125,7 +214,7 @@
           </p>
           <br>
           <p>
-            Each gaming system will have its own rules for combat, for chases, for skill checks. If you get caught in a confrontation playing a game 
+            Each gaming system will have its own rules for combat, for chases, for using skills. If you get caught in a confrontation playing a game 
             of Dungeons and Dragons, then use these rules for resolving the combat.
           </p>
           <br>
@@ -134,13 +223,70 @@
             realistic odds for your character and see what happens.
           </p>
           <br>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          <br>
+          <h3 id="extended-play">Extended play example</h3>
+          <br>
+          <br>
           <h3 id="glossary">Glossary</h3>
-
-
-
-
-
-            <br>       
+          <br>
+          <p>NPC = Non Player Character - Any character that the players do not control.</p>
+          <br>
+          <p>PC = Player Character - Any characters controlled by players.</p>
+          <br>
+          <h4>Remote Event</h4>
+          <br>
+          <p>
+            Something important has happened that bears on the adventure, but the player characters were not present when the event occurred, they only learn about it remotely. This
+            can result in many ways, from a non-player character telling them some piece of news, to coming across evidence of this other event.
+          </p>
+          <br>
+          <h4>NPC Action</h4>
+          <p>
+            An existing non-player character makes a surprise action.
+          </p>
+          <br>
+          <h4>introduce a new PC</h4>
+          <br>
+          <p>
+            A brand new face is involved in the adventure. This may be someone the player characters had expected to meet, or a surprise.
+          </p>
+          <br>
+          <h4>Move towards a thread</h4>
+          <br>
+          <p>
+            Threads are the goals that player characters are going after. These are the unresolved missions that the players are trying to solve. There could be more than one thread in an
+            adventure, some big and important while others of less consequence. 
+          </p>
+          <br>
+          <h4>Move away from a thread</h4>
+          <br>
+          <p>
+            Just as the previous random event will help player characters solve an open thread, this random event will make it harder. 
+          </p>
+          <br>
+          <h4>Close a thread</h4>
+          <br>
+          <p>
+            The random event is so important it actually closes an open thread. To close a thread, the issue is resolved or simply goes away out of the PC's minds.
+          </p>
+          <br>
+          <h4>PC/NPC negative/positive</h4>
+          <br>
+          <p>
+            Something bad, or good, happens to a player character, or non player character. 
+          </p>
+          <br>
+          <h4>Ambiguous event</h4>
+          <br>
+          <p>
+            This is a catchall category for anything that does not directly impact characters or NPCs. The event is not necessarily bad or good. The event can be important, but often it is more 
+            atmospheric to the scene.
+          </p>
+          <br>       
         </div>
       </div>
     </div>
