fix typos in the how to use modal section

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
           <h3 id="ttrpg">What is a roleplaying game?</h3>
           <br>
           <p>
-            Table top Role playing games (ttrpg) such as <a href="https://dnd.wizards.com/" target="_blank">Dungeons & Dragons</a> and <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank">Call of Cthulhu</a>
-             are pen & paper, collaborative story telling games that uses dice to determine results.
+            Tabletop Role-playing games (ttrpg) such as Dungeons & Dragons and Call
+             of Cthulhu are pen & paper, collaborative storytelling games. They use dice to determine results.
           </p>
           <br>
           <p>
-            In most roleplaying games, there are two distinct roles. The Game Master(GM) and the players. 
+            In most roleplaying games, there are two distinct roles. There is the Game Master(GM) and the players.
           </p>
           <br>
           <p>
-            The GM is the main storyteller for the game. They create and describe the adventure for the players, 
-            introduce conflicts, control any non-playable characters(NPC) the players interact with, 
-            give the players goals to accomplish, and describe the outcomes of dice rolls.  
+            The GM is the storyteller for the game. They create and describe the adventure for the players, 
+            introduce conflicts, control any characters the players interact with(NPC's), give the players goals to accomplish, 
+            and describe the outcomes of dice rolls.
           </p>
           <br>
           <p>
@@ -69,8 +69,8 @@
           </p>
           <br>
           <p>
-            In most games, player actions are limited by the choices given to them by the designer of the game.
-             Role-playing games are different in that the players have complete control over where they want to go and what they want to do.
+            In most games, player actions are limited to the choices given to them by the game's designer. Role-playing games are different 
+            in that the players have complete control over where they want to go and what they want to do.
           </p>
           <br>
           <br>
@@ -81,32 +81,29 @@
           <h3 id="how-to-use">Mythic</h3>
           <br>
           <p>
-            Mythic is a tool for use with your table-top RPG sessions. It is a simple GM emulator. 
-            You can ask it yes/no questions and generate random events that focus on any relevant NPC and story threads in your adventure.
-            It is a digital implimentation of the <a href="https://www.drivethrurpg.com/product/20798/Mythic-Game-Master-Emulator" target="_blank">Mythic Game Master Emulator</a> book.  
+            Mythic is a tool for use with your table-top RPG sessions. It is a simple GM emulator. You can ask Mythic yes/no questions and generate random events that focus 
+            on relevant NPC and story threads in your adventure. It is a digital implementation of 
+            the <a href="https://www.drivethrurpg.com/product/20798/Mythic-Game-Master-Emulator" target="_blank">Mythic Game Master Emulator</a> book.  
           </p>
           <br>
           <p>
-            Normally, before a session begins, the GM must spend a lot of time generating the adventure, coming up with plot points, characters and obstacles. 
+            Before a session begins, the GM must spend a lot of time generating the adventure, coming up with plot points, characters, and obstacles.
+            Mythic is different in that it requires no preparation from the GM. Mythic adventures are improvised, with perhaps a few 
+            minutes of brainstorming to form the initial setup.
           </p>
           <p>
-            Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
-            with perhaps a few minutes of brainstorming to come up with the initial setup.
-          </p>
-          <br>
-          <p>
-            Mythic can also be played entirely without a GM. The same mechanics in Mythic that allow a GM to run an 
-            adventure without preparation also allows a group of players to play without a GM.
+            Mythic can also be played entirely without a GM. The mechanics in 
+            Mythic that allow a GM to run an adventure without preparation, also allow groups of players to play without a GM.
           </p>
           <br>
           <p>
-            The possibilities of what mythic can generate are limited only by the players imagination. At times answers will be very clear, and at other times 
-            they will be vauge and require a good bit of interpritation.
+            The possibilities of what mythic can generate are limited only by the player's imagination. At times answers will be clear, 
+            and at other times they will be vague and require a good bit of interpretation.
           </p>
           <br>
           <p>
-            If you don't know anything about role playing games, thats ok. Mythic can be used as a creative writing tool to
-            generate ideas for stories, characters and plot twists. Any author can use it for insperation when they have writers block. 
+            If you don't know anything about role-playing games, that's ok. Mythic 
+            can be used as a creative writing tool to generate ideas for stories, characters, and plot twists. 
           </p>
           <br>
           <br>
@@ -119,25 +116,26 @@
           <h4>Setup</h4>
           <br>
           <p>
-            To get the most out of mythic its best to do a couple of minutes preperation. Or you can skip the setup and start playing straight away.
+            To get the most out of Mythic it's best to do a couple of minutes of preparation. Or you can skip the setup and start playing straight away.
           </p>
           <br>
           <p>
-            Go to the tab "lists" tab and add any characters or threads relevant to your adventure. If you have no ideas, you can generate an event 
-            in the oracle tab or go <a href="https://donjon.bin.sh/" target="_blank">to this website</a> and generate any number of random characters and
-            threads. A thread is just a small plot point the characters are moving towards. There is no minimum or maximum amount of characters or threads in a session.
+            Go to the "lists" tab and add any characters or threads relevant to your adventure. If you have no ideas, you can generate an event in the oracle tab or go
+             <a href="https://donjon.bin.sh/" target="_blank">to this website</a>  A thread is just a plot point the characters are moving towards. There is no minimum or 
+             maximum amount of characters or threads in a session.
           </p>
           <br>
           <p>
-            Go the scene tab and add your first scene. Label it whatever you would like and then write the scene setup. A couple of lines is fine. All 
-            that is important is that you write the main action you would like to accomplish for this scene. If you have no ideas again you can generate an event 
-            in the oracle tab and see what ideas it gives you. 
+            Go to the "scene" tab and add your first scene. Label it whatever you would like, then write the scene setup. A couple of lines is fine. 
+            All that is important is that you write the main action you would like to accomplish for this scene. 
+            If you have no ideas, again, you can generate an event in the "oracle" tab and see what ideas it gives you. 
           </p>
           <br>
           <h4>Starting a new scene</h4>
           <br>
           <p>
-            When you are ready to begin a scene, Click the "start scene" button in the oracle tab. It will tell you if your scene is unmodified, altered or interrupted. 
+            When ready to begin a scene, in the "oracle" tab click the "start scene" button. This will tell you if 
+            your scene is unmodified, altered, or interrupted. 
           </p>
           <br>
           <p>
@@ -145,23 +143,24 @@
           </p>
           <br>
           <p>
-            An altered scene is changed slightly. Perhaps its the weather or you take a detour somewhere, but the main action of the scene is the same. You can generate an event if you need an idea of how.
-          </p>
+            An altered scene is changed slightly. Perhaps it's the weather or you take a detour somewhere, but the main action of the scene is the same. 
+            You can generate an event if you need an idea of how.
           <br>
           <p>
-            An interrupted scene is completely different than what you had planned. An interrupted scene will also give you a focus for the interruption
-            and should generate an event also to see what happens. 
+            An interrupted scene is completely different than what you had planned. An interrupted scene will also give you a focus for the interruption. 
+            The "event" button will generate the context of the interruption. 
           </p>
           <br>
           <h4>Playing out a scene</h4>
           <br>
-          <p>A scene is of no fixed length. It ends when you feel it has ended. If the main action you wanted to accomplish is finished you could consider the scene
-            over. A scene can last 5 minutes or 5 days, it doesn't matter.
+          <p>
+            A scene is of no fixed length. It ends when you feel it has ended. If the main action of the scene is 
+            finished, consider the scene over. A scene can last 5 minutes or 5 days, it doesn't matter.
           </p>
           <br>
           <p>
-            When you feel the scene is over you can end it. If the players felt in control of the scene, lower the chaos number. If the players were not in control 
-          , then raise the chaos number. If you are not sure, then raise it.
+            When you feel the scene is over you can end it. If the players felt in control of the scene, 
+            lower the chaos number. If the players were not in control, then raise the chaos number. If in doubt, raise it.
           </p>
           <br>
           <p>
@@ -175,19 +174,21 @@
           <h4>Asking questions</h4>
           <br>
           <p>
-            At various points throughtout the session, players may want to ask questions, "Is a door locked?", "Is there any light coming from the house?". In these 
-            situations, players can use the question button in the oracle tab. 
+            At various points throughout the session, players may want to ask questions, "Is a door locked?", 
+            "Is there any light coming from the house?". In these situations, players can use the question button in the oracle tab.
           </p>
           <br>
           <p>
             Form a yes/no question in your mind. when you click the question button, set the odds of a "YES" answer to the question and click the submit button.
           </p>
           <br>
-          <p>There are 4 possible results. Yes, no, yes esceptional and no exceptional.</p>
+          <p>
+            There are four possible results. Yes, no, yes exceptional, and no exceptional.
+          </p>
           <br>
           <p>
-            Along with the answer to the question, a random event may also be triggered. The players will also recieve a focus for the random event and should generate
-            an event for it also to see what happens.
+            Along with the answer to the question, a random event may also trigger. 
+            The players will receive a focus and should generate an "event" for the context.
           </p>
           <br>
           <h4>Some Example Question</h4>
@@ -207,7 +208,7 @@
           <p>Exceptional No: All is silent. There is no appropriate exceptional result, so this remains the same as a simple no</p>
           <br>
           <br>
-          <h3 id="other-systems">How to use this with another gaming system?</h3>
+          <h3 id="other-systems">Mythic & other RPG systems</h3>
           <br>
           <p>
             Mythic provides structure and ideas for your adventure to unfold naturally, but what about rules for fighting or skill checks?
@@ -219,8 +220,8 @@
           </p>
           <br>
           <p>
-            You can also just use mythic and question fate to resolve anything you want. You can ask fate " I punch the zombie, does it die?" set 
-            realistic odds for your character and see what happens.
+            You can also just use Mythic to resolve these confrontations by asking questions. 
+            "I punch the zombie. Does it die?" set realistic odds for your character and see what happens.
           </p>
           <br>
           <br>
