add comments to html

--- a/index.html
+++ b/index.html
@@ -357,9 +357,8 @@
           <!--modal close/submit button-->
           <div id="set-odds"><button id="set-odds-button"><i class="fas fa-check-circle"></i></button></div>
           </div>
-          <div class="buffer"></div>
-          <div id="text-display">
-            
+          <div class="buffer"></div> 
+          <div id="text-display">        
           </div>
         </div>
 
@@ -389,7 +388,7 @@
 
       <!--journal-->
       <div id="journal" class="tabcontent">
-        <div id="scene-window">
+        <div id="scene-window"> <!--where the scene tabs will be displayed-->
 
         </div>
         <div id="scene-bottom-row" class="bottom-row">
@@ -403,15 +402,15 @@
 
       <!--lists-->
       <div id="list" class="tabcontent">
-        <div id="list-container">
-          <div id="characters" >
+        <div id="list-container"> <!--display for list items-->
+          <div id="characters" ><!--characters lists-->
             <h2 class="header">characters & groups</h2>
             <input id="char-input" type="text" placeholder="Add character...">
             <button id="character-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
             <ul id="char-ul">
             </ul>
           </div>
-          <div id="threads">
+          <div id="threads"><!--threads lists-->
             <h2 class="header">Threads</h2>
             <input id="thread-input" type="text" placeholder="Add thread.." required>
             <button id="thread-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
@@ -422,7 +421,7 @@
       </div>
     </div>
   </section>
-
+  <!--footer-->
   <footer>
     <div id="footer">
       <a href="https://github.com/xiaoniuniu89" target="_blank">
@@ -436,9 +435,6 @@
       </a>
     </div>
   </footer>
-
-
-
   <script src="assets/script.js"></script>
 </body>
 </html>
