--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </p>
           <br>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br>
           <br>
@@ -107,7 +107,7 @@
           </p>
           <br>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br>
           <br>
@@ -225,7 +225,7 @@
           </p>
           <br>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <br>
           <br>
