add rel='noopener' to anchor links on suggestion of lighthouse test

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <br>
           <p>
             Tabletop Role-playing games (ttrpg) such as 
-            <a href="https://dnd.wizards.com/" target="_blank" aria-label="learn more about dungeons and dragons here (opens in a new tab">Dungeons & Dragons</a> and 
-            <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank" aria-label="learn more about Call of Cthulu here (opens in a new tab">Call of Cthulu</a>
+            <a href="https://dnd.wizards.com/" target="_blank" rel="noopener" aria-label="learn more about dungeons and dragons here (opens in a new tab">Dungeons & Dragons</a> and 
+            <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank" rel="noopener" aria-label="learn more about Call of Cthulu here (opens in a new tab">Call of Cthulu</a>
             are pen & paper, collaborative storytelling games. They use dice to determine results.
           </p>
           <br>
@@ -82,7 +82,7 @@
           <p>
             Mythic is a tool for use with your table-top RPG sessions. It is a simple GM emulator. You can ask Mythic yes/no questions and generate random events that focus 
             on relevant NPC and story threads in your adventure. It is a digital implementation of 
-            the <a href="https://www.drivethrurpg.com/product/20798/Mythic-Game-Master-Emulator" target="_blank" aria-label="purchase the source book here (opens in a new tab)">Mythic Game Master Emulator</a> book.  
+            the <a href="https://www.drivethrurpg.com/product/20798/Mythic-Game-Master-Emulator" target="_blank" rel="noopener" aria-label="purchase the source book here (opens in a new tab)">Mythic Game Master Emulator</a> book.  
           </p>
           <br>
           <p>
@@ -120,7 +120,7 @@
           <br>
           <p>
             Go to the "lists" tab and add any characters or threads relevant to your adventure. If you have no ideas, you can generate an event in the oracle tab or go
-             <a href="https://donjon.bin.sh/" target="_blank" aria-label="donjon is a website full of random table generators for your ttrpg games (opens in a new tab)">to this website</a>  A thread is just a plot point the characters are moving towards. There is no minimum or 
+             <a href="https://donjon.bin.sh/" target="_blank" rel="noopener" aria-label="donjon is a website full of random table generators for your ttrpg games (opens in a new tab)">to this website</a>  A thread is just a plot point the characters are moving towards. There is no minimum or 
              maximum amount of characters or threads in a session.
           </p>
           <br>
@@ -412,13 +412,13 @@
   <!--footer-->
   <footer>
     <div id="footer">
-      <a href="https://github.com/xiaoniuniu89" target="_blank" aria-label="check out my other projects on github (opens in a new tab)">
+      <a href="https://github.com/xiaoniuniu89" target="_blank" rel="noopener" aria-label="check out my other projects on github (opens in a new tab)">
         <i class="fab fa-github"></i>
       </a>
-      <a href="https://discord.com/channels/883249633474801674/883249633474801677" target="_blank" aria-label="check out my discord channel (opens in a new tab)">
+      <a href="https://discord.com/channels/883249633474801674/883249633474801677" target="_blank" rel="noopener" aria-label="check out my discord channel (opens in a new tab)">
         <i class="fab fa-discord"></i>
       </a>
-      <a href="https://www.linkedin.com/in/daniel-callaghan-5ab143203/" target="_blank" aria-label="check out my facebook profile (opens in a new tab)">
+      <a href="https://www.linkedin.com/in/daniel-callaghan-5ab143203/" target="_blank" rel="noopener" aria-label="check out my facebook profile (opens in a new tab)">
         <i class="fab fa-linkedin"></i>
       </a>
     </div>
