--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             are pen & paper, collaborative storytelling games. They use dice to determine results.
           </p>
           <br>
-          <p>
+          <p class="extra">
             In most roleplaying games, there are two distinct roles. There is the Game Master(GM) and the players.
           </p>
           <br>
-          <p>
+          <p class="extra">
             The GM is the storyteller for the game. They create and describe the adventure for the players, 
             introduce conflicts, control any characters the players interact with(NPC's), give the players goals to accomplish, 
             and describe the outcomes of dice rolls.
@@ -71,8 +71,9 @@
           </p>
           <br>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" allow="accelerometer; autoplay; 
+          <iframe class="extra" width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <a href="https://www.youtube.com/watch?v=2PEt5RdNHNw&t=458s" target="_blank" rel="noopener" class="small-display" aria-label="A video about Role playing games that opens in a new tab">More about role-playing games</a>
           <br>
           <br>
           <h3 id="how-to-use">Mythic</h3>
@@ -94,19 +95,20 @@
             Mythic that allow a GM to run an adventure without preparation, also allow groups of players to play without a GM.
           </p>
           <br>
-          <p>
+          <p class="extra">
             The possibilities of what mythic can generate are limited only by the player's imagination. At times answers will be clear, 
             and at other times they will be vague and require a good bit of interpretation.
           </p>
           <br>
-          <p>
+          <p class="extra">
             If you don't know anything about role-playing games, that's ok. Mythic 
             can be used as a creative writing tool to generate ideas for stories, characters, and plot twists. 
           </p>
           <br>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" allow="accelerometer; autoplay; 
+          <iframe class="extra" width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <a href="https://www.youtube.com/watch?v=rksqvR-9cYI&t=169s" target="_blank" rel="noopener" class="small-display" aria-label="A video about how to use Mythic in your RPG games that opens in a new tab">More about using Mythic</a>
           <br>
           <br>
           <h3 id="rules">How to use Mythic</h3>
@@ -171,7 +173,7 @@
           <br>
           <h4>Asking questions</h4>
           <br>
-          <p>
+          <p class="extra">
             At various points throughout the session, players may want to ask questions, "Is a door locked?", 
             "Is there any light coming from the house?". In these situations, players can use the question button in the oracle tab.
           </p>
@@ -208,7 +210,7 @@
           <br>
           <h3 id="other-systems">Mythic & other RPG systems</h3>
           <br>
-          <p>
+          <p class="extra">
             Mythic provides structure and ideas for your adventure to unfold naturally, but what about rules for fighting or skill checks?
           </p>
           <br>
@@ -224,7 +226,8 @@
           <br>
           <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" allow="accelerometer; autoplay; 
-          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="extra"></iframe>
+          <a href="https://www.youtube.com/watch?v=I9ag6U3a8eM&list=PLDvunq75UfH_GAUWYcYSGL_vftZG0nzR- target="_blank" rel="noopener" class="small-display" aria-label="A video of Mythic being used in a real game. opens in a new tab">Mythic full game example!</a>
           <br>
           <br>
           <h3 id="glossary">Glossary</h3>
