add css and js folder and update links in html and css file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="mythic gm, gm emulator, dm emulator, solo ttrpg, Role-Playing dungeon master, game master, tabletop rpg, ttrpg, dungeons and dragons">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mythic GM</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
@@ -422,6 +422,6 @@
       </a>
     </div>
   </footer>
-  <script src="assets/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
