--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="extra"></iframe>
-          <a href="https://www.youtube.com/watch?v=I9ag6U3a8eM&list=PLDvunq75UfH_GAUWYcYSGL_vftZG0nzR- target="_blank" rel="noopener" class="small-display" aria-label="A video of Mythic being used in a real game. opens in a new tab">Mythic full game example!</a>
+          <a href="https://www.youtube.com/watch?v=I9ag6U3a8eM&list=PLDvunq75UfH_GAUWYcYSGL_vftZG0nzR-" target="_blank" rel="noopener" class="small-display" aria-label="A video of Mythic being used in a real game. opens in a new tab">Mythic full game example!</a>
           <br>
           <br>
           <h3 id="glossary">Glossary</h3>
